--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-device-info": "^11.1.0",
     "react-native-floating-action": "^1.22.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-localize": "^3.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
@@ -41,6 +47,7 @@
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
