--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.4.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
