--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -17,8 +18,11 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
+    "i18next": "^23.12.2",
+    "intl-pluralrules": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-native": "0.74.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-device-info": "^11.1.0",
@@ -27,6 +31,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-localize": "^3.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
     "react-native-push-notification": "^8.1.1",
