--- a/ios/Arbon/Info.plist
+++ b/ios/Arbon/Info.plist
@@ -52,5 +52,7 @@
 	<array>
   	<string>Ionicons.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>We need your permission to use the camera</string>
 </dict>
 </plist>
