--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^15.0.0",
     "react-native": "0.74.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-camera": "^4.2.1",
     "react-native-device-info": "^11.1.0",
     "react-native-floating-action": "^1.22.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -35,6 +36,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
     "react-native-push-notification": "^8.1.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
