--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
