--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "crypto-js": "^4.2.0",
     "i18next": "^23.12.2",
     "intl-pluralrules": "^2.0.1",
     "lodash": "^4.17.21",
@@ -26,10 +28,13 @@
     "react-native": "0.74.2",
     "react-native-actionsheet": "^2.4.2",
     "react-native-camera": "^4.2.1",
+    "react-native-config": "^1.5.3",
     "react-native-device-info": "^11.1.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-floating-action": "^1.22.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-localize": "^3.2.0",
     "react-native-modal": "^13.0.1",
@@ -37,6 +42,7 @@
     "react-native-permissions": "^4.1.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
