--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-view-shot": "^3.8.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
