--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-floating-action": "^1.22.0",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
@@ -47,7 +48,7 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-share": "^10.2.1",
+    "react-native-share": "^11.0.3",
     "react-native-svg": "^15.4.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.1.0",
