--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^15.0.0",
     "react-native": "0.74.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-biometrics": "^3.0.1",
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.5.3",
     "react-native-contacts": "^7.0.8",
