--- a/ios/Arbon/Info.plist
+++ b/ios/Arbon/Info.plist
@@ -60,5 +60,7 @@
 	<string>This app requires Face ID to authenticate users securely.</string>
 	<key>NSTouchIDUsageDescription</key>
 	<string>This app requires Touch ID to authenticate users securely.</string>
+	<key>CodePushDeploymentKey</key>
+	<string>hT_QLGIIGZ2JzbXhgfrkEpFAHYqiY-Vt-263Yj</string>
 </dict>
 </plist>
