--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,9 +5,13 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+# ✅ EXPLICITLY SET iOS PLATFORM VERSION
+platform :ios, '16.0'
+
+# Prepare the React Native project (standard RN)
 prepare_react_native_project!
 
+# Handle dynamic frameworks if needed
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
@@ -17,9 +21,9 @@ end
 target 'Arbon' do
   config = use_native_modules!
 
+  # ✅ React Native pods setup
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
@@ -29,12 +33,18 @@ target 'Arbon' do
   end
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+    # ✅ React Native post-install fixes
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :mac_catalyst_enabled => false
     )
+
+    # ✅ Force deployment target on all pods
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      end
+    end
   end
 end
