--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-biometrics": "^3.0.1",
     "react-native-camera": "^4.2.1",
+    "react-native-code-push": "^9.0.1",
     "react-native-config": "^1.5.3",
     "react-native-contacts": "^7.0.8",
     "react-native-device-info": "^11.1.0",
